adding new countdown widget

--- a/i18n/cs.yaml
+++ b/i18n/cs.yaml
@@ -52,6 +52,10 @@ widget:
         title:
             other: Tagy
 
+    countdown:
+        title:
+            other: Odpočet do tábora
+
 search:
     title:
         other: Hledání
