change coutndown name

--- a/i18n/cs.yaml
+++ b/i18n/cs.yaml
@@ -54,7 +54,7 @@ widget:
 
     countdown:
         title:
-            other: Odpočet do tábora
+            other: Hurá! Na BORO2022 jedeme už za
 
 search:
     title:
